rozdzial 2, opis ue4

--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -32,14 +32,32 @@
 \chapter{Wstęp}
 Gry wideo stanowią rozrywkę dla coraz szerszego grona odbiorców, a sama branża nieustannie rośnie, o czym najlepiej świadczy fakt, iż pod względem wygenerowanych przychodów prześcignęła już branże filmową oraz muzyczną~\cite{nasdaq-video-games-industry}. Gry coraz częściej postrzegane są jako nowoczesne medium przekazu oraz forma wyrazu artystycznego i poruszają tematy dotychczas zarezerwowane dla literatury i kinematografii. W związku z tym istnieje wiele narzędzi wspierających tworzenie gier, a jednym z najpopularniejszych jest silnik {\em Unreal Engine 4} (zwany dalej "UE4"). Motywację do stworzenia niniejszej pracy stanowiły dla nas chęć zgłębienia technologii UE4, podjęcia technicznego wyzwania, jakie stawia zaprogramowanie gry wideo oraz pasja do gier.
 
-\section{Kolejny podrozdział}
-To jest kolejny podrozdział. Spis treści tworzy się automatycznie dopóki zaznaczamy gdzie zaczynają się rozdziały i podrozdziały.
+\chapter{Unreal Engine 4}
+\section{Czym jest silnik gry?}
+Przez pojęcie ,,silnik gry`` rozumie się zbiór funkcji i narzędzi ({\em ang. framework}) wspierający tworzenie gier. Musi on oferować przede wszystkim renderowanie grafiki, dźwięku i obsługę sterowania aczkolwiek obecnie najpopularniejsze silniki posiadają znacznie więcej funkcji, a są to między innymi obsługa sieci, symulacja fizyki, edytory shaderów i efektów cząsteczkowych, produkcja przerywników filmowych oraz obsługa wielu platform na przykład komputerów, konsol czy urządzeń mobilnych takich jak smartfony. Każdy popularny silnik dystrybuowany jest wraz z edytorem będacym graficznym interfejsem między programistą, a funkcjami silnika.
+\newline Wykorzystanie jednego silnika do stworzenia wielu różnych gier znacząco skraca okres produkcji i stanowi powszechną w branży praktykę.\cite{learning-unreal}\cite{wiki-game-engine}
 
-\chapter{Jakiś rozdział}
+\section{Komponenty UE4}
+tu chodzi o ficzery unreala, info m.in. z naszej prezentacji na seminarium oraz
+\newline\url{https://www.unrealengine.com/en-US/features}
+\newline\url{https://docs.unrealengine.com/latest/INT/Engine/index.html}
+
+\section{Konwencja}
+\url{https://docs.unrealengine.com/latest/INT/Gameplay/Framework/index.html}
+\newline\url{https://docs.unrealengine.com/latest/INT/Gameplay/Framework/QuickReference/index.html}
+\newline obowiazkowo obrazek z dolu strony :D
+
+\chapter{thesis\_1, rozdzial dot. naszej gry}
 
 \chapter{Kolejny rozdział}
 
 \begin{thebibliography}{9}
+
+\bibitem{learning-unreal}
+Joanna Lee, \textit{Learning Unreal Engine Game Development}, Packt Publishing, 2016
+
+\bibitem{wiki-game-engine}
+\textit{,,Game engine``, Wikipedia}, \url{https://en.wikipedia.org/wiki/Game_engine} {\mbox(dostęp 29.12.2017)}
 
 \bibitem{nasdaq-video-games-industry}
 Trevir Nath, \textit{Investing in Video Games: This Industry Pulls In More Revenue Than Movies, Music},
