dodano cel i zakres pracy

--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -30,7 +30,9 @@
 \tableofcontents
 
 \chapter{Wstęp}
-Gry wideo stanowią rozrywkę dla coraz szerszego grona odbiorców, a sama branża nieustannie rośnie, o czym najlepiej świadczy fakt, iż pod względem wygenerowanych przychodów prześcignęła już branże filmową oraz muzyczną~\cite{nasdaq-video-games-industry}. Gry coraz częściej postrzegane są jako nowoczesne medium przekazu oraz forma wyrazu artystycznego i poruszają tematy dotychczas zarezerwowane dla literatury i kinematografii. W związku z tym istnieje wiele narzędzi wspierających tworzenie gier, a jednym z najpopularniejszych jest silnik {\em Unreal Engine 4} (zwany dalej "UE4"). Motywację do stworzenia niniejszej pracy stanowiły dla nas chęć zgłębienia technologii UE4, podjęcia technicznego wyzwania, jakie stawia zaprogramowanie gry wideo oraz pasja do gier.
+Gry wideo stanowią rozrywkę dla coraz szerszego grona odbiorców, a sama branża nieustannie rośnie, o czym najlepiej świadczy fakt, iż pod względem wygenerowanych przychodów prześcignęła już branże filmową oraz muzyczną~\cite{nasdaq-video-games-industry}. Gry coraz częściej postrzegane są jako nowoczesne medium przekazu oraz forma wyrazu artystycznego i poruszają tematy dotychczas zarezerwowane dla literatury i kinematografii. W związku z tym istnieje wiele narzędzi wspierających tworzenie gier, a jednym z najpopularniejszych jest silnik {\em Unreal Engine 4} (zwany dalej "UE4").
+\section{Cel i zakres pracy}
+Motywację do stworzenia niniejszej pracy stanowiły dla nas chęć zgłębienia technologii UE4, podjęcia technicznego wyzwania, jakie stawia zaprogramowanie gry wideo oraz pasja do gier. Na całą pracę składa się zaprojektowanie i zaimplementowanie gry z użyciem UE4 oraz podstawowy opis silnika i implementacji gry. Ponadto może ona służyć za przykład i drogowskaz dla osób chcących napisać własną grę.
 
 \chapter{Unreal Engine 4}
 \section{Czym jest silnik gry?}
