dodano czesc tekstu Marcina do wstepu i celu pracy

--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -30,9 +30,12 @@
 \tableofcontents
 
 \chapter{Wstęp}
-Gry wideo stanowią rozrywkę dla coraz szerszego grona odbiorców, a sama branża nieustannie rośnie, o czym najlepiej świadczy fakt, iż pod względem wygenerowanych przychodów prześcignęła już branże filmową oraz muzyczną~\cite{nasdaq-video-games-industry}. Gry coraz częściej postrzegane są jako nowoczesne medium przekazu oraz forma wyrazu artystycznego i poruszają tematy dotychczas zarezerwowane dla literatury i kinematografii. W związku z tym istnieje wiele narzędzi wspierających tworzenie gier, a jednym z najpopularniejszych jest silnik {\em Unreal Engine 4} (zwany dalej "UE4").
+Gry wideo stanowią rozrywkę dla coraz szerszego grona odbiorców, a sama branża nieustannie rośnie, o czym najlepiej świadczy fakt, iż pod względem wygenerowanych przychodów prześcignęła już branże filmową oraz muzyczną~\cite{nasdaq-video-games-industry}. Gry coraz częściej postrzegane są jako nowoczesne medium przekazu oraz forma wyrazu artystycznego i poruszają tematy dotychczas zarezerwowane dla literatury i kinematografii. 
+\newline Od strony technicznej tworzenie gier wideo ({\em ang. game development}) to obszerny dział informatyki łączący w sobie między innymi takie działy jak grafika komputerowa, inżynieria oprogramowania, programowanie komputerów, bezpieczeństwo komputerowe. W związku z tym istnieje wiele narzędzi wspierających tworzenie gier, a jednym z najpopularniejszych jest silnik {\em Unreal Engine 4} (zwany dalej "UE4").
 \section{Cel i zakres pracy}
-Motywację do stworzenia niniejszej pracy stanowiły dla nas chęć zgłębienia technologii UE4, podjęcia technicznego wyzwania, jakie stawia zaprogramowanie gry wideo oraz pasja do gier. Na całą pracę składa się zaprojektowanie i zaimplementowanie gry z użyciem UE4 oraz podstawowy opis silnika i implementacji gry. Ponadto może ona służyć za przykład i drogowskaz dla osób chcących napisać własną grę.
+Głównym celem niniejszej pracy jest rozwój wiedzy o procesie tworzenia gier wideo. Ponadto motywację stanowiły chęć zgłębienia technologii UE4, podjęcia technicznego wyzwania, jakie stawia zaprogramowanie gry wideo oraz pasja do gier. Na całą pracę składa się zaprojektowanie i zaimplementowanie gry z użyciem UE4 oraz podstawowy opis silnika i implementacji gry. 
+\newline Uwagę skupiono między innymi na poznawaniu działania i efektywnym wykorzystywaniu technologii UE4 oraz oprogramowania do modelowania i animacji Blender, zdobyciu doświadczenia w pracy zespołowej oraz opracowaniu metodyki pracy, która pozwoli na wielokrotne wykorzystanie napisanego kodu oraz skrócenie czasu tworzenia oprogramowania.
+\newline Praca ta może z powodzeniem służyć za przykład i drogowskaz dla osób chcących napisać własną grę.
 
 \chapter{Unreal Engine 4}
 \section{Czym jest silnik gry?}
